[project]
name = "datastorm-round1"
version = "1.0.0"
description = ""
authors = [
    {name = "NhatLNA",email = "anhnhat909940@gmail.com"}
]
license = {text = "license"}
readme = "README.md"
requires-python = "3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
