[project]
name = "datastorm-env"
version = "0.1.0"
description = "Environment only, not a Python package"
requires-python = ">=3.10"

# TẤT CẢ dependencies phải nằm ở đây
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "jinja2==3.1.2",
    "pandas==2.2.3",
    "numpy==2.1.3",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",

    "scikit-learn==1.5.2",
    "xgboost==2.1.1",
    "pyarrow==22.0.0",
    "joblib==1.4.2",
    "shap==0.44.0",

    "river==0.23.0",
    "evidently==0.4.33",
    "scipy==1.14.1",

    "gymnasium==0.29.1",
    "stable-baselines3==2.5.0",
    "torch==2.9.1",
    "tensorboard==2.17.0",

    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "plotly==5.24.1",

    "schedule==1.2.1",
    "pyyaml==6.0.2"
]

[tool.setuptools]
# Quan trọng: KHÔNG cho setuptools auto-scan packages
packages = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
